# py-now-playing

./: .gitignore  README.md  pipx_shared.pth  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
examples/: discordRPC_v3.pyw
examples/archive/: discordRPC_v2.pyw
py_now_playing/: __init__.py  media_info.py  media_timeline.py  playback_info.py  pnp.py
tests/: controlpanel.py  main.py  maincopy copy.py  maincopy-copy.pyw  maincopy.py  maincopy.pyw  tests.py
