[tool.poetry]
name = "py-now-playing"
version = "0.1.0"
description = "A Python Library to get the currently playing media"
authors = ["ABUCKY0 <81783950+ABUCKY0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.1.0"
winsdk = "^1.0.0b10"

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"

[tool.poetry.group.dev.dependencies]
asynctest = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"